--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -4,7 +4,7 @@
   --color-green_dark: #042940;
   --color-green_turquoise: #005C53;
   --color-green_basic: #9FC131;
-  --color-orange_pumpkin: #F25430;
+  --color-orange_pumpkin: #FC8C62;
   --color-green_soap: #D6D58E;
   --color-dwttxt: #FFFFFF;
   --color-dwtund: #005C53;
@@ -33,7 +33,7 @@ html {
 }
 
 .section {
-  padding: 64px 32px;
+  padding: 100px 32px;
 }
 
 p {
@@ -52,55 +52,6 @@ p {
 .container-image {
   position: relative;
   display: inline-block;
-}
-
-.menu {
-  position: fixed;
-  width: 100%;
-  top: 0;
-  z-index: 100;
-  background-color: var(--color-white);
-}
-.menu__liste {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 0;
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.4);
-}
-.menu__el {
-  position: relative;
-  padding: 20px;
-  list-style: none;
-}
-.menu__el a {
-  color: var(--color-);
-  text-decoration: none;
-  transition: all 0.3s ease;
-  transform-origin: center;
-}
-.menu__el a:before {
-  content: "";
-  position: absolute;
-  bottom: 10px;
-  left: 0;
-  width: 100%;
-  height: 4px;
-  border-radius: 2px;
-  background-color: var(--color-Black);
-  transform: scaleX(0);
-  transition: transform 0.3s ease;
-}
-.menu__el a:hover {
-  color: var(--color-white);
-  background-color: var(--color-green_turquoise);
-  transform: rotate(360deg);
-  padding: 6px 4px 2px 4px;
-  border-radius: 2px;
-  letter-spacing: 1px;
-}
-.menu__el a:hover:before {
-  transform: scaleX(1);
 }
 
 .img-soutien {
@@ -177,6 +128,7 @@ p {
 
 .test-title {
   position: relative;
+  color: var(--color-Black);
 }
 
 .barre {
@@ -209,14 +161,10 @@ p {
   left: 0;
 }
 
-.test-title {
-  color: var(--color-Black);
-}
-
-.img-interview {
+.img-search {
   width: 400px;
   height: 500px;
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.4);
+  border-radius: 15% 0 0 15%;
 }
 
 .img--text {
@@ -235,4 +183,302 @@ p {
   width: 160px;
   margin-left: 0;
   transform: rotate(20deg);
+}
+
+.image-container {
+  overflow: hidden; /* Assurez-vous que l'image est bien contenue dans le conteneur */
+}
+
+.svg-inter {
+  width: 150px;
+}
+
+.svg-age {
+  width: 150px;
+}
+
+.svg-ok {
+  width: 80px;
+}
+
+.container-search {
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  justify-content: center;
+  display: flex;
+  border-radius: 15px;
+  gap: 40px;
+  padding: 20px;
+  background-color: var(--color-orange_pumpkin);
+}
+
+.container-flex {
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
+}
+
+.title-med {
+  font-size: var(--font-big);
+  color: var(--color-Black);
+  padding-bottom: 64px;
+  text-align: center;
+}
+
+.btn-stat {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  font-size: var(--font-big);
+  font-family: "mr-eaves-xl-modern", sans-serif;
+  font-weight: bold;
+  font-style: normal;
+  margin-top: 64px;
+  background: none;
+  border: 3px solid var(--color-orange_pumpkin);
+  border-radius: 2px;
+  padding: 5px;
+}
+
+.title-container {
+  display: flex;
+  justify-content: center;
+}
+
+.bar {
+  flex-grow: 1;
+  height: 3px;
+  background-color: var(--color-orange_pumpkin); /* Couleur de la barre horizontale */
+  margin-top: 17px;
+  border-radius: 2px;
+}
+
+.title {
+  margin: 0 10px; /* Espacement des barres horizontales par rapport au titre */
+}
+
+@media (max-width: 700px) {
+  nav ul {
+    margin: 0;
+  }
+  .menu__burger {
+    position: fixed;
+    top: 0px;
+    right: 5px;
+    z-index: 100;
+    padding: 0;
+    fill: var(--color-orange_pumpkin);
+    cursor: pointer;
+    background-color: transparent;
+    border: none;
+  }
+  .menu__liste {
+    position: fixed;
+    background-color: var(--color-green_soap);
+    top: 0;
+    left: 0;
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    transform: translateX(100%);
+    opacity: 0;
+    pointer-events: none;
+    transition: all 0.3s cubic-bezier(0.16, 1, 0.3, 1);
+    z-index: 50;
+    padding: 0;
+  }
+  .menu__el {
+    transform: translateY(-100px);
+    opacity: 0;
+    transition: all 0.3s 0.5s cubic-bezier(0.16, 1, 0.3, 1);
+    border-bottom: var(--color-Black);
+  }
+  .menu__el a {
+    text-decoration: none;
+    color: var(--color-white);
+    transition: all 0.4s ease-in-out;
+  }
+  .menu__el--active a {
+    color: var(--color-orange_pumpkin);
+  }
+  .menu__el a:hover,
+  .menu__el a:focus {
+    color: var(--color-orange_pumpkin);
+    letter-spacing: 5px;
+  }
+  .menu--open .menu__liste {
+    transform: translateX(0);
+    opacity: 1;
+    pointer-events: all;
+  }
+  .menu--open .menu__el {
+    transform: translateY(0);
+    opacity: 1;
+  }
+  .menu--open .menu__el:nth-child(2) {
+    transition-delay: 0.7s;
+  }
+  .menu--open .menu__el:nth-child(3) {
+    transition-delay: 0.9s;
+  }
+  .menu--open .menu__el:nth-child(4) {
+    transition-delay: 1.1s;
+  }
+  .menu--open .menu__el:nth-child(5) {
+    transition-delay: 1.3s;
+  }
+  .menu--open .menu__el:nth-child(6) {
+    transition-delay: 1.5s;
+  }
+  .titre-image {
+    top: 35%;
+    left: 0;
+  }
+  .img--text {
+    display: flex;
+    flex-direction: column;
+  }
+  .img--text__flex {
+    padding-left: 0;
+    padding-top: 64px;
+  }
+  .img-search {
+    width: 300px;
+    height: 400px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .svg-fruits {
+    position: absolute;
+    right: -19px;
+    bottom: -80px;
+    width: 100px;
+    margin-left: 0;
+    transform: rotate(20deg);
+  }
+  .container-flex {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
+  .container-hyp {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
+  .right {
+    border: 2px solid var(--color-orange_pumpkin);
+    padding: 20px;
+    border-radius: 15px;
+  }
+  .left {
+    border: 2px solid var(--color-orange_pumpkin);
+    padding: 20px;
+    border-radius: 15px;
+  }
+  .right-2 {
+    border: 2px solid var(--color-orange_pumpkin);
+    padding: 20px;
+    border-radius: 15px;
+  }
+  .left-2 {
+    border: 2px solid var(--color-orange_pumpkin);
+    padding: 20px;
+    border-radius: 15px;
+  }
+}
+@media (min-width: 701px) {
+  .menu__burger {
+    display: none;
+  }
+  .menu {
+    position: fixed;
+    width: 100%;
+    top: 0;
+    z-index: 100;
+    background-color: var(--color-white);
+  }
+  .menu__liste {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.4);
+  }
+  .menu__el {
+    position: relative;
+    padding: 20px;
+    list-style: none;
+  }
+  .menu__el a {
+    color: var(--color-);
+    text-decoration: none;
+    transition: all 0.3s ease;
+    transform-origin: center;
+  }
+  .menu__el a:before {
+    content: "";
+    position: absolute;
+    bottom: 10px;
+    left: 0;
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    background-color: var(--color-orange_pumpkin);
+    transform: scaleX(0);
+    transition: transform 0.3s ease;
+  }
+  .menu__el a:hover {
+    color: var(--color-white);
+    background-color: var(--color-orange_pumpkin);
+    transform: rotate(360deg);
+    padding: 6px 4px 2px 4px;
+    border-radius: 2px;
+    letter-spacing: 1px;
+  }
+  .menu__el a:hover:before {
+    transform: scaleX(1);
+  }
+  .menu__el--active {
+    color: var(--color-orange_pumpkin);
+  }
+  .container-hyp {
+    display: grid;
+    grid-template-columns: 2fr 2fr;
+    gap: 20px;
+  }
+  .right {
+    grid-column: 2/2;
+    grid-row: 2;
+    border: 2px solid var(--color-orange_pumpkin);
+    padding: 20px;
+    border-radius: 15px;
+  }
+  .left {
+    grid-column: 1/2;
+    grid-row: 1;
+    border: 2px solid var(--color-orange_pumpkin);
+    padding: 20px;
+    border-radius: 15px;
+  }
+  .right-2 {
+    grid-column: 2/2;
+    grid-row: 4;
+    border: 2px solid var(--color-orange_pumpkin);
+    padding: 20px;
+    border-radius: 15px;
+  }
+  .left-2 {
+    grid-column: 1/2;
+    grid-row: 3;
+    border: 2px solid var(--color-orange_pumpkin);
+    padding: 20px;
+    border-radius: 15px;
+  }
 }/*# sourceMappingURL=app.css.map */
