--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -97,7 +97,7 @@ p{
 }
 
 .credits a:hover{
-    color: var(--color-green_turquoise);
+    color: var(--color-orange_pumpkin);
     transition: .3s;
 }
 .subnav{
@@ -107,7 +107,7 @@ p{
 }
 
 .subnav__el a:hover{
-    color: var(--color-green_turquoise);
+    color: var(--color-orange_pumpkin);
     transition: .3s;
 }
 
@@ -139,14 +139,14 @@ p{
     top: 50%;
     left: 50%;
     transform: translateY(-50%);
-    width: 50%; /* Largeur de la barre */
+    width: 40%; /* Largeur de la barre */
     height: 3px; /* Hauteur de la barre */
     border-radius: 2px;
     background-color: var(--color-orange_pumpkin); /* Couleur de la barre */
   }
 
   .wave-section {
-    min-height: 100vh;
+    min-height: 80vh;
     width: 100%;
     color: var(--color-green_soap);
     position: relative;
@@ -211,6 +211,8 @@ p{
     flex-wrap: wrap;
     align-items: flex-start;
     justify-content: center;
+    min-height: 450px;
+    max-width: 450px;
     display: flex;
     border-radius: 15px;
     gap: 40px;
@@ -224,28 +226,12 @@ p{
     gap: 20px;
   }
 
-  .title-med{
+  .title--med{
     font-size: var(--font-big);
     color: var(--color-Black);
     padding-bottom: 64px;
     text-align: center;
   }
-
-  .btn-stat{
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    font-size: var(--font-big);
-    font-family: "mr-eaves-xl-modern", sans-serif;
-    font-weight: bold;
-    font-style: normal;
-    margin-top: 64px;
-    background: none;
-    border: 3px solid var(--color-orange_pumpkin);
-    border-radius: 2px;
-    padding: 5px;
-  }
-
 
   .title-container {
     display: flex;
@@ -267,34 +253,18 @@ p{
 
 
   @media (max-width: 700px){
-   
-    nav ul{
-        margin: 0;
-    } 
-
-    .menu__burger{
-        position: fixed;
-        top: 0px;
-        right: 5px;
-        z-index: 100;
-        padding: 0;
-        fill: var(--color-orange_pumpkin);
-        cursor: pointer;
-        background-color: transparent;
-        border: none;
-    }
 
     .menu__liste{
-        position: fixed;
-        background-color: var(--color-green_soap);
-        top: 0;
+       position: fixed;
+         background-color: var(--color-green_soap);
+         top: 0;
         left: 0;
         list-style: none;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-evenly;
-        align-items: center;
-        width: 100%;
+       display: flex;
+       flex-direction: column;
+       justify-content: space-evenly;
+       align-items: center;
+       width: 100%;
         height: 100%;
         transform: translateX(100%);
         opacity: 0;
@@ -302,14 +272,14 @@ p{
         transition: all .3s cubic-bezier(0.16, 1, 0.3, 1);
         z-index: 50;
         padding: 0;
-    }
+     }
 
     .menu__el{
-        transform: translateY(-100px); 
+       transform: translateY(-100px); 
         opacity: 0;
         transition: all .3s .5s cubic-bezier(0.16, 1, 0.3, 1);
         border-bottom: var(--color-Black);
-    }
+ }
 
     .menu__el a{
         text-decoration: none;
@@ -323,8 +293,8 @@ p{
 
     .menu__el a:hover,
     .menu__el a:focus{   
-        color: var(--color-orange_pumpkin);
-        letter-spacing: 5px;
+         color: var(--color-orange_pumpkin);
+         letter-spacing: 5px;
     } 
 
     .menu--open .menu__liste{
@@ -337,25 +307,64 @@ p{
     .menu--open .menu__el{
         transform: translateY(0); 
         opacity: 1;
+     }
+
+     .menu--open .menu__el:nth-child(2){
+         transition-delay: .7s;
+     }
+
+     .menu--open .menu__el:nth-child(3){
+         transition-delay: .9s;
+ }
+
+     .menu--open .menu__el:nth-child(4){
+         transition-delay: 1.1s;
     }
 
-    .menu--open .menu__el:nth-child(2){
-        transition-delay: .7s;
-    }
-
-    .menu--open .menu__el:nth-child(3){
-        transition-delay: .9s;
-    }
-
-    .menu--open .menu__el:nth-child(4){
-        transition-delay: 1.1s;
-    }
-
-    .menu--open .menu__el:nth-child(5){
-        transition-delay: 1.3s;
-    }
-    .menu--open .menu__el:nth-child(6){
+     .menu--open .menu__el:nth-child(5){
+         transition-delay: 1.3s;
+     }
+     .menu--open .menu__el:nth-child(6){
         transition-delay: 1.5s;
+    }
+    
+    .menu__burger{
+        position: fixed;
+        top: 20px;
+        right: 30px;
+        z-index: 100;
+        width: 42px;
+        height: 24px;
+        cursor: pointer;
+        background: none;
+        border: none;
+        }
+
+    .menu__burger span{
+        width: 100%;
+        height: 4px;
+        background-color: var(--color-orange_pumpkin);
+        display: block;
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+    }
+
+    .menu__burger span::before, .menu__burger span::after{
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 4px;
+        background-color: var(--color-orange_pumpkin);
+
+    }
+
+    .menu__burger span::before{
+        transform: translateY(-10px);
+    }
+
+    .menu__burger span::after{
+        transform: translateY(10px);
     }
 
     .titre-image {
@@ -394,6 +403,7 @@ p{
       .container-flex{
         display: flex;
         flex-direction: column;
+        align-items: center;
         gap: 20px;
       }
 
@@ -428,9 +438,33 @@ p{
         padding: 20px;
         border-radius: 15px;
       }
+
+
+  .container-search{
+    min-height: 350px;
+    max-width: 350px;
+  }
   }
 
   @media (min-width: 701px){
+
+:root{
+    --font-big: 26px;
+    --font-intermediate: 18px;
+    --font-medium: 18px;
+    --font-small: 10px;
+}
+    body{
+        font-size: var(--font-small);
+    }
+
+    p{
+        font-size: var(--font-medium);
+    }
+
+    .title{
+        font-size: var(--font-big);
+    }
 
     .menu__burger{
        display: none;
@@ -510,6 +544,8 @@ p{
         border: 2px solid var(--color-orange_pumpkin);
         padding: 20px;
         border-radius: 15px;
+        min-height: 250px;
+        max-width: 550px;
       }
     
       .left{
@@ -518,6 +554,8 @@ p{
         border: 2px solid var(--color-orange_pumpkin);
         padding: 20px;
         border-radius: 15px;
+        min-height: 250px;
+        max-width: 550px;
       }
     
       .right-2{
@@ -526,6 +564,8 @@ p{
         border: 2px solid var(--color-orange_pumpkin);
         padding: 20px;
         border-radius: 15px;
+        min-height: 250px;
+        max-width: 550px;
       }
     
       .left-2{
@@ -534,12 +574,308 @@ p{
         border: 2px solid var(--color-orange_pumpkin);
         padding: 20px;
         border-radius: 15px;
+        min-height: 250px;
+        max-width: 550px;
       }
+
+      .container-flex{
+        flex-direction: row;
+        flex-wrap: wrap;
+        align-items: flex-start;
+        justify-content: center;
+      }
+
+   
   }
 
   @media (min-width: 1000px){
+    body{
+        font-size: 18px;
+    }
+
+    .container-hyp{
+      display: grid;
+      grid-template-columns: 2fr 2fr;
+      justify-items: center;
+      gap: 20px;
+      
+    }
+  
+    .right{
+      grid-column: 2/2;
+      grid-row: 2;
+      border: 2px solid var(--color-orange_pumpkin);
+    }
+  
+    .left{
+      grid-column: 1/2;
+      grid-row: 1;
+      border: 2px solid var(--color-orange_pumpkin);
+    }
+  
+    .right-2{
+      grid-column: 2/2;
+      grid-row: 4;
+      border: 2px solid var(--color-orange_pumpkin);
+
+    }
+  
+    .left-2{
+      grid-column: 1/2;
+      grid-row: 3;
+
+    }
     
   }
+  
+//SLIDER TEXTES
+.slider {
+    background-color: var(--color-orange_pumpkin);
+    height: 250px;
+    position: relative;
+	  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    border-radius: 20px;
+    overflow: hidden;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-flex-flow: row nowrap;
+        -ms-flex-flow: row nowrap;
+            flex-flow: row nowrap;
+    -webkit-box-align: end;
+    -webkit-align-items: flex-end;
+        -ms-flex-align: end;
+            align-items: flex-end;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .slider__nav {
+    width: 12px;
+    height: 12px;
+    margin: 2rem 12px;
+    border-radius: 50%;
+    z-index: 10;
+    outline: 6px solid var(--color-white);
+    outline-offset: -6px;
+    cursor: pointer;
+    -webkit-appearance: none;
+       -moz-appearance: none;
+            appearance: none;
+    -webkit-backface-visibility: hidden;
+            backface-visibility: hidden;
+  }
+  .slider__nav:checked {
+    -webkit-animation: check  0.4s linear forwards;
+            animation: check  0.4s linear forwards;
+  }
+  .slider__nav:checked:nth-of-type(1) ~ .slider__inner {
+    left: 0%;
+  }
+  .slider__nav:checked:nth-of-type(2) ~ .slider__inner {
+    left: -100%;
+  }
+  .slider__nav:checked:nth-of-type(3) ~ .slider__inner {
+    left: -200%;
+  }
+  .slider__nav:checked:nth-of-type(4) ~ .slider__inner {
+    left: -300%;
+  }
+
+  .slider__inner {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 400%;
+    height: 100%;
+    -webkit-transition: left 0.4s;
+    transition: left 0.4s;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-flex-flow: row nowrap;
+        -ms-flex-flow: row nowrap;
+            flex-flow: row nowrap;
+  }
+  .slider__contents {
+    height: 100%;
+    padding: 2rem;
+    text-align: center;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-flex: 1;
+    -webkit-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
+    -webkit-flex-flow: column nowrap;
+        -ms-flex-flow: column nowrap;
+            flex-flow: column nowrap;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .slider__txt{
+    color: var(--color-Black);
+    font-size: 27px;
+    font-weight: 800;
+    max-width: 300px;
+    display: flex;
+    align-items: center;
+  }
+  @-webkit-keyframes check {
+    50% {
+      outline-color: var(--color-Black);
+    }
+    100% {
+      outline-color: var(--color-Black);
+  
+    }
+  }
+  @keyframes check {
+    50% {
+      outline-color: var(--color-Black);
+  
+    }
+    100% {
+      outline-color: var(--color-Black);
+  
+    }
+  }
+
+  .svg-notif{
+    width: 30px;
+  }
+
+  .hidden {
+    display: none;
+  }
+
+  .btn {
+    cursor: pointer;
+    font-family: snicker, sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: var(--font-medium);
+    padding: 8px 32px;
+    border: 3px solid;
+    border-radius: 56px;
+    transition: background-color 0.5s cubic-bezier(0.16, 1, 0.3, 1), border-color 0.5s cubic-bezier(0.16, 1, 0.3, 1);
+  }
+  .btn-stat {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    font-size: var(--font-big);
+    font-family: "mr-eaves-xl-modern", sans-serif;
+    font-weight: bold;
+    font-style: normal;
+    margin-top: 64px;
+    margin-bottom: 32px;
+    background: none;
+    border: 3px solid var(--color-orange_pumpkin);
+    border-radius: 2px;
+    padding: 5px;
+  }
+
+  .btn-stat:hover{
+    background-color: var(--color-orange_pumpkin);
+    color: var(--color-white);
+  }
+
+  .btn-stat:active{
+    background-color: var(--color-orange_pumpkin);
+    color: var(--color-white);
+  }
+
+  .legende {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
+    gap: 40px;
+    padding: 8px;
+    margin: 16px 32px;
+  }
+
+  .border-legend{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 20px;
+    border: 3px solid var(--color-orange_pumpkin);
+    border-radius: 3px;
+  }
+
+  .pad-no{
+    padding: 0;
+    margin-left: 20px;
+  }
+
+
+  .credits__list{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .credits__el {
+    list-style: none;
+  }
+
+  .credits__el a{
+    text-decoration: none;
+  }
+
+
+  .svg-cred{
+    width: 30px;
+  }
+
+  .title--light{
+    text-align: center;
+    color: var(--color-Black);
+  }
+
+  .credit{
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .cred-border{
+    padding: 20px;
+    margin-bottom: 40px;
+    border-radius: 3px;
+    background-color: var(--color-orange_pumpkin);
+  }
+
+  .svg-arrow{
+    width: 80px;
+  }
+
+  .link--credits{
+    color: var(--color-Black);
+  }
+
+  .section-back{
+    background-color: var(--color-green_soap);
+  }
+
+  .footer-line{
+    border-top: 3px solid var(--color-orange_pumpkin);
+  }
+
 
 
 
